[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/town/Town.gd" id="1"]
[ext_resource type="Script" path="res://scenes/town/ShopPanel.gd" id="2"]
[ext_resource type="Script" path="res://scenes/town/RecruitPanel.gd" id="3"]
[ext_resource type="Script" path="res://scenes/town/PromotePanel.gd" id="4"]

[sub_resource type="StyleBoxFlat" id="town_bg"]
bg_color = Color(0.06, 0.08, 0.1, 1)

[node name="Town" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("town_bg")

[node name="TownName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 48.0
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="GoldLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 52.0
offset_bottom = 72.0
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="PartyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.12
anchor_right = 0.3
anchor_bottom = 0.88

[node name="PartyLabel" type="Label" parent="PartyPanel"]
layout_mode = 1
anchors_preset = -1
offset_left = 8.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 28.0
text = "Party"
theme_override_font_sizes/font_size = 16

[node name="PartyList" type="VBoxContainer" parent="PartyPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 8.0
offset_top = 36.0
offset_right = -8.0
offset_bottom = -8.0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 4

[node name="MenuBox" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.65
anchor_bottom = 0.85
alignment = 1
theme_override_constants/separation = 8

[node name="ShopBtn" type="Button" parent="MenuBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Shop"

[node name="RecruitBtn" type="Button" parent="MenuBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Recruit"

[node name="PromoteBtn" type="Button" parent="MenuBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Promote"

[node name="RestBtn" type="Button" parent="MenuBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Rest (-50 gold)"

[node name="LeaveBtn" type="Button" parent="MenuBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Leave Town"

[node name="ShopPanel" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.95
script = ExtResource("2")

[node name="ShopBg" type="Panel" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShopGold" type="Label" parent="ShopPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 28.0
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="Tabs" type="HBoxContainer" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.06
anchor_right = 0.9
offset_bottom = 80.0
alignment = 1
theme_override_constants/separation = 16

[node name="BuyTab" type="Button" parent="ShopPanel/Tabs"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 36)
text = "Buy"

[node name="SellTab" type="Button" parent="ShopPanel/Tabs"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 36)
text = "Sell"

[node name="BuyScroll" type="ScrollContainer" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.6
anchor_bottom = 0.85

[node name="BuyList" type="VBoxContainer" parent="ShopPanel/BuyScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="SellScroll" type="ScrollContainer" parent="ShopPanel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.6
anchor_bottom = 0.85

[node name="SellList" type="VBoxContainer" parent="ShopPanel/SellScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="ItemDetail" type="Label" parent="ShopPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.62
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.75
autowrap_mode = 2
theme_override_font_sizes/font_size = 13

[node name="CloseShop" type="Button" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.88
anchor_right = 0.65
anchor_bottom = 0.95
text = "Close"

[node name="RecruitPanel" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.95
script = ExtResource("3")

[node name="RecruitBg" type="Panel" parent="RecruitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RecruitGold" type="Label" parent="RecruitPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 28.0
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="ClassScroll" type="ScrollContainer" parent="RecruitPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.06
anchor_right = 0.5
anchor_bottom = 0.85

[node name="ClassList" type="VBoxContainer" parent="RecruitPanel/ClassScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="RecruitDetail" type="VBoxContainer" parent="RecruitPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.52
anchor_top = 0.06
anchor_right = 0.95
anchor_bottom = 0.8
theme_override_constants/separation = 8

[node name="RecruitStatus" type="Label" parent="RecruitPanel/RecruitDetail"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2
theme_override_font_sizes/font_size = 13

[node name="GenderBox" type="HBoxContainer" parent="RecruitPanel/RecruitDetail"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 16

[node name="MaleBtn" type="Button" parent="RecruitPanel/RecruitDetail/GenderBox"]
layout_mode = 2
custom_minimum_size = Vector2(100, 36)
text = "Male"

[node name="FemaleBtn" type="Button" parent="RecruitPanel/RecruitDetail/GenderBox"]
layout_mode = 2
custom_minimum_size = Vector2(100, 36)
text = "Female"

[node name="NameInput" type="LineEdit" parent="RecruitPanel/RecruitDetail"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
placeholder_text = "Enter name..."
max_length = 20

[node name="ConfirmRecruit" type="Button" parent="RecruitPanel/RecruitDetail"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
disabled = true
text = "Recruit"

[node name="CloseRecruit" type="Button" parent="RecruitPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.88
anchor_right = 0.65
anchor_bottom = 0.95
text = "Close"

[node name="PromotePanel" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.95
script = ExtResource("4")

[node name="PromoteBg" type="Panel" parent="PromotePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MemberScroll" type="ScrollContainer" parent="PromotePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.06
anchor_right = 0.45
anchor_bottom = 0.85

[node name="MemberList" type="VBoxContainer" parent="PromotePanel/MemberScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="PromoteOptions" type="VBoxContainer" parent="PromotePanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.06
anchor_right = 0.95
anchor_bottom = 0.8
theme_override_constants/separation = 6

[node name="PromoteStatus" type="Label" parent="PromotePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.82
anchor_right = 0.95
anchor_bottom = 0.9
theme_override_font_sizes/font_size = 14

[node name="ClosePromote" type="Button" parent="PromotePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.88
anchor_right = 0.65
anchor_bottom = 0.95
text = "Close"

[connection signal="pressed" from="MenuBox/ShopBtn" to="." method="_on_shop"]
[connection signal="pressed" from="MenuBox/RecruitBtn" to="." method="_on_recruit"]
[connection signal="pressed" from="MenuBox/PromoteBtn" to="." method="_on_promote"]
[connection signal="pressed" from="MenuBox/RestBtn" to="." method="_on_rest"]
[connection signal="pressed" from="MenuBox/LeaveBtn" to="." method="_on_leave"]
[connection signal="pressed" from="ShopPanel/Tabs/BuyTab" to="ShopPanel" method="_on_buy_tab"]
[connection signal="pressed" from="ShopPanel/Tabs/SellTab" to="ShopPanel" method="_on_sell_tab"]
[connection signal="pressed" from="ShopPanel/CloseShop" to="ShopPanel" method="_on_close"]
[connection signal="closed" from="ShopPanel" to="." method="_on_sub_panel_closed"]
[connection signal="pressed" from="RecruitPanel/RecruitDetail/GenderBox/MaleBtn" to="RecruitPanel" method="_on_gender_male"]
[connection signal="pressed" from="RecruitPanel/RecruitDetail/GenderBox/FemaleBtn" to="RecruitPanel" method="_on_gender_female"]
[connection signal="text_changed" from="RecruitPanel/RecruitDetail/NameInput" to="RecruitPanel" method="_on_name_changed"]
[connection signal="pressed" from="RecruitPanel/RecruitDetail/ConfirmRecruit" to="RecruitPanel" method="_on_confirm"]
[connection signal="pressed" from="RecruitPanel/CloseRecruit" to="RecruitPanel" method="_on_close"]
[connection signal="closed" from="RecruitPanel" to="." method="_on_sub_panel_closed"]
[connection signal="pressed" from="PromotePanel/ClosePromote" to="PromotePanel" method="_on_close"]
[connection signal="closed" from="PromotePanel" to="." method="_on_sub_panel_closed"]
